--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "arithmetic-game",
+	"name": "Arithmetic Game",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "A fast-paced arithmetic speed drill that tracks your progress in a note.",
+	"author": "Your Name",
+	"authorUrl": "https://github.com/yourusername",
 	"isDesktopOnly": false
 }
