--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-arithmetic-game",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "A mental arithmetic practice game for Obsidian",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
+	"keywords": [
+		"obsidian",
+		"plugin",
+		"education",
+		"math",
+		"arithmetic",
+		"game"
+	],
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
